# codemesh2013

./: README.md
ios/Streamer/: ViewController.h  ViewController.m
ios/Streamer.xcodeproj/: project.pbxproj
ios/Streamer/CV/: BlockingQueueInputStream.h  BlockingQueueInputStream.m  CVServer.mm
ios/Streamer/en.lproj/: ViewController.xib
jvm/: build.sbt
jvm/src/main/resources/: application.conf  logback.xml
jvm/src/main/scala/org/eigengo/cm/: rest.scala  shell.scala
jvm/src/main/scala/org/eigengo/cm/api/: api.scala  recog.scala
jvm/src/main/scala/org/eigengo/cm/core/: coordinator.scala  core.scala  encoding.scala  imageio.scala  jabber.scala  recog.scala
jvm/src/test/scala/org/eigengo/cm/api/: RecogServiceSpec.scala
native/: im.cpp  im.h  rabbit.cpp  rabbit.h
native/gtest-1.6.0/include/gtest/internal/: gtest-port.h
native/rabbitmq-c/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
native/rabbitmq-c/librabbitmq/: Makefile  cmake_install.cmake
native/rabbitmq-c/tests/: CTestTestfile.cmake  Makefile
native/rabbitmq-cpp/: CMakeCache.txt  Makefile
native/recog/src/: coins.cpp  coins.h  main.cpp  main.h
native/recog/test/: CMakeLists.txt  coins.cpp  rings.cpp
slides/: actors.graffle  cm.key  sd.graffle
